doc: update readme adding references